[package]
name = "rust_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo run https://finance.yahoo.co.jp/quote/5016.T --key name
# cargo run -- --key code --key name  --display-key name --display-key name --display-key price --display-key priceChange --display-key priceChangeRate --display-key priceDateTime "https://finance.yahoo.co.jp/quote/7203.T/"   
[dependencies]
regex = "1.5"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
strsim = "0.10.0"
clap = { version = "4.4", features = ["derive"] }
scraper = "0.24.0"