[package]
name = "yf-quote-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cloudflare Worker dependencies
worker = "0.4.0"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"

# Core logic dependencies
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
scraper = "0.24.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
